footer almost completed

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
     <footer class="main-footer">
       <div class="container footer-boxes">
           <div class="box box-1">
-            <h3 class="footer-item-title">About us</h3>
+            <h4 class="footer-item-title">About us</h4>
             <ul class="footer-item-description">
               <li>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
@@ -252,40 +252,44 @@
             </ul>
           </div>
           <div class="box box-2">
-            <h3 class="footer-item-title">Latest News</h3>
+            <h4 class="footer-item-title">Latest News</h4>
             <ul class="footer-item-description">
               <li>
-                <b>@Jaymesh</b> just submitted another<br />
-                great item on <b>#themforeset</b><br />
-                about 3 hours ago
+                <a href="#">
+                  <b>@Jaymesh</b> just submitted another<br />
+                  great item on <b>#themforeset</b><br />
+                  about 3 hours ago
+                </a>
               </li>
               <li>
-                <b>@Jaymesh</b> just submitted another<br />
-                great item on <b>#themforeset</b><br />
-                about 3 hours ago
+                <a href="#">
+                  <b>@Jaymesh</b> just submitted another<br />
+                  great item on <b>#themforeset</b><br />
+                  about 3 hours ago
+                </a>
               </li>
           </div>
           <div class="box box-3">
-            <h3 class="footer-item-title">Latest Posts</h3>
+            <h4 class="footer-item-title">Latest Posts</h4>
             <ul class="footer-item-description">
-                <li>Lorem ipsum dolor sit amet conset</li>
-                <li>Lorem ipsum dolor sit amet.</li>
-                <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
-                <li>Lorem ipsum dolor sit amet.</li>
+                <li><a href="#">Lorem ipsum dolor sit amet conset</a></li>
+                <li><a href="#">Lorem ipsum dolor sit amet. sit a.</a></li>
+                <li><a href="#">Lorem ipsum, dolor sit amet consectetur</a></li>
+                <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
             </ul>
             
           </div>
           <div class="box box-4">
-              <h3 class="footer-item-title">Flickr</h3>
+              <h4 class="footer-item-title">Flickr</h4>
               <div class="footer-item-description">
-                  <div class="flickr-images"><img src="https://source.unsplash.com/collection/190727/50x50" alt=""></div>
-                  <div class="flickr-images"><img src="https://source.unsplash.com/random/50x50" alt=""></div>
-                  <div class="flickr-images"><img src="https://source.unsplash.com/50x50/?nature,sky" alt=""></div>
-                  <div class="flickr-images"><img src="https://source.unsplash.com/50x50/?nature,animal" alt=""></div>
-                  <div class="flickr-images"><img src="https://source.unsplash.com/user/erondu/50x50" alt=""></div>
-                  <div class="flickr-images"><img src="https://source.unsplash.com/50x50/?nature,forest" alt=""></div>
-                  <div class="flickr-images"><img src="https://source.unsplash.com/collection/190327/50x50" alt=""></div>
-                  <div class="flickr-images"><img src="https://source.unsplash.com/50x50/?nature,water" alt=""></div>
+                  <div class="flickr-images"><img src="https://source.unsplash.com/collection/190727/100x100" alt=""></div>
+                  <div class="flickr-images"><img src="https://source.unsplash.com/random/100x100" alt=""></div>
+                  <div class="flickr-images"><img src="https://source.unsplash.com/100x100/?nature,sky" alt=""></div>
+                  <div class="flickr-images"><img src="https://source.unsplash.com/100x100/?nature,animal" alt=""></div>
+                  <div class="flickr-images"><img src="https://source.unsplash.com/user/erondu/100x100" alt=""></div>
+                  <div class="flickr-images"><img src="https://source.unsplash.com/100x100/?nature,forest" alt=""></div>
+                  <div class="flickr-images"><img src="https://source.unsplash.com/collection/190327/100x100" alt=""></div>
+                  <div class="flickr-images"><img src="https://source.unsplash.com/100x100/?nature,water" alt=""></div>
               </div>      
           </div>
       </div>
@@ -295,14 +299,14 @@
           <p class="copyright">Copyright &copy; 2003-2012 Ventus Inc. All rights reserved.</p>
           <ul class="footer-social">
             <li><a href=""><i class="fab fa-twitter-square"></i></a> </li>
-            <li><i class="fab fa-facebook-square"></i></li>
-            <li><i class="fab fa-vimeo-square"></i></li>
-            <li><i class="fab fa-google-plus-square"></i></li>
-            <li><i class="fab fa-twitter-square"></i></li>
-            <li><i class="fab fa-pinterest-square"></i></li>
+            <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
+            <li><a href="#"><i class="fab fa-vimeo-square"></i></a></li>
+            <li><a href="#"><i class="fab fa-google-plus-square"></i></a></li>
+            <li><a href="#"><i class="fab fa-twitter-square"></i></a></li>
+            <li><a href="#"><i class="fab fa-pinterest-square"></i></a></li>
           </ul>
         </div>
-        <div class="up-arrow"><i class="fas fa-arrow-circle-up"></i></div>
+        <div class="up-arrow"><a href="./index.html"><i class="fas fa-arrow-circle-up"></i></a></div>
       </div>
     </footer>
   </body>
