more fixes on the footer

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               asperiores cumque modi, eveniet repellat ab temporibus eum tempora
               minus error...
             </p>
-            <button class="btn blue feature-button">Read more</button>
+            <button class="btn blue feature-button"><a href="">Read more</a></button>
           </div>
           <div class="box box-2">
             <div class="icons">
@@ -232,7 +232,7 @@
           <h2>
             Get in touch with us <span class="inline-heading h2">Now!</span>
           </h2>
-          <button class="btn grey">Get started</button>
+          <button class="btn grey">Contact us</button>
         </div>
       </section>
     </main>
@@ -257,14 +257,14 @@
               <li>
                 <a href="#">
                   <b>@Jaymesh</b> just submitted another<br />
-                  great item on <b>#themforeset</b><br />
+                  great item on <b>#themeforeset</b><br />
                   about 3 hours ago
                 </a>
               </li>
               <li>
                 <a href="#">
                   <b>@Jaymesh</b> just submitted another<br />
-                  great item on <b>#themforeset</b><br />
+                  great item on <b>#themeforeset</b><br />
                   about 3 hours ago
                 </a>
               </li>
@@ -298,7 +298,7 @@
         <div class="copyright-social-media">
           <p class="copyright">Copyright &copy; 2003-2012 Ventus Inc. All rights reserved.</p>
           <ul class="footer-social">
-            <li><a href=""><i class="fab fa-twitter-square"></i></a> </li>
+            <li><a href="#"><i class="fab fa-twitter-square"></i></a></li>
             <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
             <li><a href="#"><i class="fab fa-vimeo-square"></i></a></li>
             <li><a href="#"><i class="fab fa-google-plus-square"></i></a></li>
