--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="container hero-items">
         <div class="hero">
           <div class="hero-image">
-            <img src="./images/Header-img.png" />
+            <img src="./assets/Header-img.png" />
           </div>
           <div class="hero-description">
             <h1>
@@ -119,7 +119,7 @@
         <div class="recent-work-boxes">
           <div class="box box-1">
             <div class="recent-work-image">
-              <img src="./images/img-placeholder.png" alt="placeholder image" />
+              <img src="./assets/img-placeholder.png" alt="placeholder image" />
             </div>
             <h4 class="recent-work-title">Blog Title</h4>
             <p class="recent-work-description">
@@ -129,7 +129,7 @@
           </div>
           <div class="box box-2">
             <div class="recent-work-image">
-              <img src="./images/img-placeholder.png" alt="placeholder image" />
+              <img src="./assets/img-placeholder.png" alt="placeholder image" />
             </div>
             <h4 class="recent-work-title">Blog Title</h4>
             <p class="recent-work-description">
@@ -139,7 +139,7 @@
           </div>
           <div class="box box-3">
             <div class="recent-work-image">
-              <img src="./images/img-placeholder.png" alt="placeholder image" />
+              <img src="./assets/img-placeholder.png" alt="placeholder image" />
             </div>
             <h4 class="recent-work-title">Blog Title</h4>
             <p class="recent-work-description">
