made header and features responsive

--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
     <link rel="stylesheet" href="./css/testimonial-development.css" />
     <link rel="stylesheet" href="./css/contact-us.css" />
     <link rel="stylesheet" href="./css/footer.css">
-    <link rel="stylesheet" href="./css/media-queries.css">
   </head>
   <body>
-    <header class="main-header">
+    <header class="main-header" id="top">
       <div class="container hero-items">
         <div class="hero">
           <div class="hero-image">
@@ -50,12 +49,12 @@
       </div>
     </header>
     <main>
-      <div class="border-bg"></div>
+      <!-- <div class="border-bg"></div> -->
       <section class="features">
         <div class="container features-boxes">
           <div class="box box-1">
             <div class="icons">
-              <i class="fas fa-mobile-alt fa-3x"></i>
+              <i class="fas fa-mobile-alt"></i>
             </div>
             <h3 class="feature-title">
               <span class="inline-heading h3 no-italic">Superbly</span>
@@ -70,7 +69,7 @@
           </div>
           <div class="box box-2">
             <div class="icons">
-              <i class="fas fa-desktop fa-3x"></i>
+              <i class="fas fa-desktop"></i>
             </div>
             <h3 class="feature-title">
               <span class="inline-heading h3 no-italic">Squeeky</span> clean
@@ -84,7 +83,7 @@
           </div>
           <div class="box box-3">
             <div class="icons">
-              <i class="fas fa-laptop fa-3x"></i>
+              <i class="fas fa-laptop"></i>
             </div>
             <h3 class="feature-title">
               <span class="inline-heading h3 no-italic">Multi</span> purpose
@@ -98,7 +97,7 @@
           </div>
           <div class="box box-4">
             <div class="icons">
-              <i class="fas fa-sync-alt fa-3x"></i>
+              <i class="fas fa-sync-alt"></i>
             </div>
             <h3 class="feature-title">
               <span class="inline-heading h3 no-italic">Highly</span> Flexible
@@ -316,7 +315,7 @@
             <li><a href="#"><i class="fab fa-pinterest-square"><span class="tooltip">Pinterest</span></i></a></li>
           </ul>
         </div>
-        <div class="up-arrow"><a href="./index.html"><i class="fas fa-arrow-circle-up"></i></a></div>
+        <div class="up-arrow"><a href="#top"><i class="fas fa-arrow-circle-up"></i></a></div>
       </div>
     </footer>
   </body>
