refactor css code and make recent work and testimonial section responsive

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     <main>
       <!-- <div class="border-bg"></div> -->
       <section class="features">
-        <div class="container features-boxes">
-          <div class="box box-1">
+        <div class="container features-boxes boxes">
+          <div class="box-4-col box-1">
             <div class="icons">
               <i class="fas fa-mobile-alt"></i>
             </div>
@@ -67,7 +67,7 @@
             </p>
             <button class="btn blue feature-button"><a href="">Read more</a></button>
           </div>
-          <div class="box box-2">
+          <div class="box-4-col box-2">
             <div class="icons">
               <i class="fas fa-desktop"></i>
             </div>
@@ -81,7 +81,7 @@
             </p>
             <button class="btn blue feature-button">Read more</button>
           </div>
-          <div class="box box-3">
+          <div class="box-4-col box-3">
             <div class="icons">
               <i class="fas fa-laptop"></i>
             </div>
@@ -95,7 +95,7 @@
             </p>
             <button class="btn blue feature-button">Read more</button>
           </div>
-          <div class="box box-4">
+          <div class="box-4-col box-4">
             <div class="icons">
               <i class="fas fa-sync-alt"></i>
             </div>
@@ -115,8 +115,8 @@
         <h2>Recent work</h2>
       </div>
       <section class="container recent-work">
-        <div class="recent-work-boxes">
-          <div class="box box-1">
+        <div class="recent-work-boxes boxes">
+          <div class="box-3-col box-1">
             <div class="recent-work-image">
               <img src="./assets/img-placeholder.png" alt="placeholder image" />
             </div>
@@ -126,7 +126,7 @@
               Repudiandae, labore soluta sint laborum nam obcaecati!
             </p>
           </div>
-          <div class="box box-2">
+          <div class="box-3-col box-2">
             <div class="recent-work-image">
               <img src="./assets/img-placeholder.png" alt="placeholder image" />
             </div>
@@ -136,7 +136,7 @@
               Repudiandae, labore soluta sint laborum nam obcaecati!
             </p>
           </div>
-          <div class="box box-3">
+          <div class="box-3-col box-3">
             <div class="recent-work-image">
               <img src="./assets/img-placeholder.png" alt="placeholder image" />
             </div>
@@ -156,10 +156,28 @@
           <h2>development</h2>
         </div>
       </div>
-      <section class="testimonial-development">
-        <div class="container testimonial-development-boxes">
-          <div class="box testimonial-boxes">
-            <div class="box box-1">
+      <section class="container testimonial-development">
+        <div class="testimonial-development-boxes boxes">
+          <div class="box-3-col box-1">
+              <div class="top">
+                  <h4 class="testimonial-title">John Smith</h4>
+                  <p class="testimonial-description">
+                    &ldquo;Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Repudiandae commodi dignissimos illum tempora animi. At autem
+                    temporibus maxime ullam eos.&rdquo;
+                  </p>
+                </div>
+                <div class="bottom">
+                  <h4 class="testimonial-title">Johh Smith</h4>
+                  <p class="testimonial-description">
+                    &ldquo;Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Repudiandae commodi dignissimos illum tempora animi. At autem
+                    temporibus maxime ullam eos.&rdquo;
+                  </p>
+                </div>
+          </div>
+          <div class="box-3-col box-2">
+            <div class="top">
               <h4 class="testimonial-title">John Smith</h4>
               <p class="testimonial-description">
                 &ldquo;Lorem, ipsum dolor sit amet consectetur adipisicing elit.
@@ -167,23 +185,7 @@
                 temporibus maxime ullam eos.&rdquo;
               </p>
             </div>
-            <div class="box box-2">
-              <h4 class="testimonial-title">Johh Smith</h4>
-              <p class="testimonial-description">
-                &ldquo;Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Repudiandae commodi dignissimos illum tempora animi. At autem
-                temporibus maxime ullam eos.&rdquo;
-              </p>
-            </div>
-            <div class="box box-3">
-              <h4 class="testimonial-title">John Smith</h4>
-              <p class="testimonial-description">
-                &ldquo;Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Repudiandae commodi dignissimos illum tempora animi. At autem
-                temporibus maxime ullam eos.&rdquo;
-              </p>
-            </div>
-            <div class="box box-4">
+            <div class="bottom">
               <h4 class="testimonial-title">John Smith</h4>
               <p class="testimonial-description">
                 &ldquo;Lorem, ipsum dolor sit amet consectetur adipisicing elit.
@@ -192,7 +194,7 @@
               </p>
             </div>
           </div>
-          <div class="box tabs">
+          <div class="box-3-col box-3 tabs">
             <div class="tab">
               <input name="checkbox-tabs-group" type="radio" id="checkbox-1" class="checkbox-tab" checked>
 			        <label for="checkbox-1">Design</label>
@@ -246,8 +248,8 @@
       </section>
     </main>
     <footer class="main-footer">
-      <div class="container footer-boxes">
-          <div class="box box-1">
+      <div class="container footer-boxes boxes">
+          <div class="box-4-col box-1">
             <h4 class="footer-item-title">About us</h4>
             <ul class="footer-item-description">
               <li>
@@ -260,7 +262,7 @@
               <li>+44 74139 13807</li>
             </ul>
           </div>
-          <div class="box box-2">
+          <div class="box-4-col box-2">
             <h4 class="footer-item-title">Latest News</h4>
             <ul class="footer-item-description">
               <li>
@@ -278,7 +280,7 @@
                 </a>
               </li>
           </div>
-          <div class="box box-3">
+          <div class="box-4-col box-3">
             <h4 class="footer-item-title">Latest Posts</h4>
             <ul class="footer-item-description">
                 <li><a href="#">Lorem ipsum dolor sit amet conset</a></li>
@@ -288,7 +290,7 @@
             </ul>
             
           </div>
-          <div class="box box-4">
+          <div class="box-4-col box-4">
               <h4 class="footer-item-title">Flickr</h4>
               <div class="footer-item-description">
                   <div class="flickr-images"><img src="https://source.unsplash.com/collection/190727/100x100" alt=""></div>
