removed anchor tags from buttons

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               asperiores cumque modi, eveniet repellat ab temporibus eum tempora
               minus error...
             </p>
-            <button class="btn blue feature-button"><a href="">Read more</a></button>
+            <button class="btn blue feature-button">Read more</button>
           </div>
           <div class="box-4-col box-2">
             <div class="icons">
@@ -210,9 +210,7 @@
                   Repudiandae commodi dignissimos illum tempora animi. At
                   autem temporibus maxime ullam eos.&rdquo;
                 </p>
-                <button class="btn blue development-button">
-                  <a href="">Read more</a>
-                </button>
+                <button class="btn blue development-button">Read more</button>
               </div>
             </div>
             <div class="tab">
